# PyReconstruct

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ClosedContour.py  PyReconstruct.py  PyReconstruct_v2.py  SECURITY.md  autoseg-environment.yml  feature-list.org  pyproject.toml  readme.md  readme.org  requirements.txt  ruff.toml  run_windows.bat  setup.py  test.org  theme.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
PyReconstruct/: checker.py  cli.py  requirements.txt  run.py
dev/: Makefile  create_ng_example.toml  create_ng_zarr.py  environment_dev.yaml  image-get-center.sh  link_shell.sh  make_help.txt  pip-requirements.txt
docs/: feature-list.org
install/: windows_installer.bat
launch/: linux_run.sh  mac_run.command  readme.org  test.vbs  windows_run.bat
mac/: PyReconstruct.command  install.command  mac_installer.command  update.command
manual/: readme.md  readme.org
misc/: cvtesting.py  hide_console.txt  imagetesting.py  main.py  math.py  math.py.~1~  meshing.org  pymesh.py  series_opts.py  series_opts.ui  style.txt  tif_to_zarr.py
notes/: features.org  issues.org  manual_outline.txt  meetings.org  programming.org  style.org
packaging/: PyReconstruct.spec  README.md  rthook_gl.py  rthook_qt.py  rthook_ssl.py  rthook_stdio.py  smoke_test.py
source/: colorbutton.py  constants.py  defaults.py  editpalettewidget.py  fieldwidget.py  getstamps.py  grid.py  mainwindow.py  modebuttonwidget.py  mousedockwidget.py  objecttableitem.py  objecttablewidget.py  palettebutton.py  palettebuttonwidget.py  pyReconstruct.py  quantification.py  section.py  series.py  trace.py  xml_to_json.py  zarrgrid.py  zarrtorecon.py
src/: 3D_dev.py  3d_testing.py  PyReconstruct.py  checker.py  more_3d_testing.py  pyReconstruct.py  requirements.txt  surface_reconstruction.py  surface_reconstruction_pyqt.py  testing.py
tests/: test_calc_quantification_primitives.py  test_calc_smooth_grid.py  test_example.py  test_section_contour.py  test_trace_datatype.py  test_transform_methods.py  test_ztrace_and_log.py
windows/: install.bat  pyReconstruct.bat  readme.org  (+2 more)
(+638 files in other folders)
